--- a/docs/latex/_random_8h.tex
+++ b/docs/latex/_random_8h.tex
@@ -11,7 +11,7 @@ Defines the classes for generating random values.
 \begin{DoxyCompactItemize}
 \item 
 class \mbox{\hyperlink{class_im_gui_app_1_1_random}{Im\+Gui\+App\+::\+Random}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Defines the classes for generating random values. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
