--- a/docs/latex/_timer_8h.tex
+++ b/docs/latex/_timer_8h.tex
@@ -14,7 +14,7 @@ Defines the classes for calculating the time for frame rate evaluation.
 class \mbox{\hyperlink{class_im_gui_app_1_1_timer}{Im\+Gui\+App\+::\+Timer}}
 \begin{DoxyCompactList}\small\item\em Class for calculating the time for frame rate evaluation. \end{DoxyCompactList}\item 
 class \mbox{\hyperlink{class_im_gui_app_1_1_scoped_timer}{Im\+Gui\+App\+::\+Scoped\+Timer}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Scoped timer. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
