--- a/docs/latex/class_im_gui_app_1_1_random.tex
+++ b/docs/latex/class_im_gui_app_1_1_random.tex
@@ -1,5 +1,14 @@
 \doxysection{Im\+Gui\+App\+::Random Class Reference}
 \hypertarget{class_im_gui_app_1_1_random}{}\label{class_im_gui_app_1_1_random}\index{ImGuiApp::Random@{ImGuiApp::Random}}
+
+
+Defines the classes for generating random values.  
+
+
+
+
+{\ttfamily \#include $<$Random.\+h$>$}
+
 \doxysubsubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -25,6 +34,9 @@ static glm\+::vec3 {\bfseries Vec3} (float min, float max)
 static glm\+::vec3 {\bfseries In\+Unit\+Sphere} ()
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Defines the classes for generating random values. 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
