--- a/docs/latex/class_im_gui_app_1_1_scoped_timer.tex
+++ b/docs/latex/class_im_gui_app_1_1_scoped_timer.tex
@@ -1,5 +1,14 @@
 \doxysection{Im\+Gui\+App\+::Scoped\+Timer Class Reference}
 \hypertarget{class_im_gui_app_1_1_scoped_timer}{}\label{class_im_gui_app_1_1_scoped_timer}\index{ImGuiApp::ScopedTimer@{ImGuiApp::ScopedTimer}}
+
+
+Scoped timer.  
+
+
+
+
+{\ttfamily \#include $<$Timer.\+h$>$}
+
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -7,6 +16,9 @@
 {\bfseries Scoped\+Timer} (const std\+::string \&name)
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+Scoped timer. 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
