--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -4,7 +4,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{struct_im_gui_app_1_1_app_specification}{Im\+Gui\+App\+::\+App\+Specification}} \\*Struct for defining the default application window name and window size (width and height) }{\pageref{struct_im_gui_app_1_1_app_specification}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_layer}{Im\+Gui\+App\+::\+Layer}} \\*Template class for Im\+Gui frames. An Im\+Gui frame is marked by }{\pageref{class_im_gui_app_1_1_layer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_logger}{Im\+Gui\+App\+::\+Logger}} \\*Class for performing logging function }{\pageref{class_im_gui_app_1_1_logger}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_random}{Im\+Gui\+App\+::\+Random}} }{\pageref{class_im_gui_app_1_1_random}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_scoped_timer}{Im\+Gui\+App\+::\+Scoped\+Timer}} }{\pageref{class_im_gui_app_1_1_scoped_timer}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_random}{Im\+Gui\+App\+::\+Random}} \\*Defines the classes for generating random values }{\pageref{class_im_gui_app_1_1_random}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_scoped_timer}{Im\+Gui\+App\+::\+Scoped\+Timer}} \\*Scoped timer }{\pageref{class_im_gui_app_1_1_scoped_timer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_im_gui_app_1_1_timer}{Im\+Gui\+App\+::\+Timer}} \\*Class for calculating the time for frame rate evaluation }{\pageref{class_im_gui_app_1_1_timer}}{}
 \end{DoxyCompactList}
