--- a/docs/latex/_app_8cpp.tex
+++ b/docs/latex/_app_8cpp.tex
@@ -14,7 +14,7 @@ Implementats functions for the App class responsible which maintain the lifecycl
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include "{}Im\+Gui/\+Roboto-\/\+Regular.\+embed"{}}\newline
 {\ttfamily \#include $<$glm/glm.\+hpp$>$}\newline
-{\ttfamily \#include "{}Logger.\+h"{}}\newline
+{\ttfamily \#include "{}IGA\+\_\+\+Logger.\+h"{}}\newline
 {\ttfamily \#include $<$string$>$}\newline
 \doxysubsubsection*{Variables}
 \begin{DoxyCompactItemize}
