--- a/docs/latex/_app_8h.tex
+++ b/docs/latex/_app_8h.tex
@@ -29,7 +29,7 @@ class \mbox{\hyperlink{class_im_gui_app_1_1_app}{Im\+Gui\+App\+::\+App}}
 This file defines the App class responsible for maintaining the lifecycle of the application. 
 
 \begin{DoxyAuthor}{Author}
-n.\+a (\href{mailto:n.a@MasterpieceTechVideos.com}{\texttt{ n.\+a@\+Masterpiece\+Tech\+Videos.\+com}}) 
+n.\+a (\href{mailto:n.a@mail.com}{\texttt{ n.\+a@mail.\+com}}) 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+0.\+0 
