--- a/docs/latex/_app_8h_source.tex
+++ b/docs/latex/_app_8h_source.tex
@@ -47,7 +47,7 @@
 \DoxyCodeLine{00096\ }
 \DoxyCodeLine{00101\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_app_a31bc7517752daf52aa37fd031dbc92b8}{Close}}();}
 \DoxyCodeLine{00107\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{float}\ \mbox{\hyperlink{class_im_gui_app_1_1_app_a5837b68d78df8b601205324d6fd5144d}{GetTime}}();}
-\DoxyCodeLine{00113\ \ \ \ \ \ \ \ \ \ \ \ \ GLFWwindow*\ \mbox{\hyperlink{class_im_gui_app_1_1_app_abc34fed94848fa255e7db72305995ce7}{GetWindowHandle}}()\textcolor{keyword}{\ const\ }\{\ \textcolor{keywordflow}{return}\ m\_WindowHandle;\ \}}
+\DoxyCodeLine{00113\ \ \ \ \ \ \ \ \ \ \ \ \ GLFWwindow*\ \mbox{\hyperlink{class_im_gui_app_1_1_app_abc34fed94848fa255e7db72305995ce7}{GetWindowHandle}}()\textcolor{keyword}{\ const\ }\{\ \textcolor{keywordflow}{return}\ m\_WindowHandle;\ \}\ }
 \DoxyCodeLine{00114\ }
 \DoxyCodeLine{00115\ \ \ \ \ \ \ \ \ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00120\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{void}\ Init();}
