--- a/docs/latex/_entry_point_8h_source.tex
+++ b/docs/latex/_entry_point_8h_source.tex
@@ -6,7 +6,7 @@
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00012\ }
 \DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{_app_8h}{App.h}}"{}}}
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{_logger_8h}{Logger.h}}"{}}}
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ "{}IGA\_Logger.h"{}}}
 \DoxyCodeLine{00015\ }
 \DoxyCodeLine{00020\ \textcolor{keyword}{extern}\ \mbox{\hyperlink{class_im_gui_app_1_1_app}{ImGuiApp::App}}*\ \mbox{\hyperlink{_app_8h_a2961b7a4fc9c1fe631bdf5a074147c3e}{ImGuiApp::CreateApp}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}**\ argv);}
 \DoxyCodeLine{00022\ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{_entry_point_8h_a8bd72616f89083ec211da0e6613b6389}{g\_ApplicationRunning}}\ =\ \textcolor{keyword}{true};}
@@ -14,7 +14,7 @@
 \DoxyCodeLine{00024\ \textcolor{keyword}{namespace\ }ImGuiApp\ \{}
 \DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{_entry_point_8h_a6a66c7d1ef2fe6c0932ed0ddd50e0394}{Main}}(\textcolor{keywordtype}{int}\ argc,\ \textcolor{keywordtype}{char}**\ argv)}
 \DoxyCodeLine{00033\ \ \ \ \ \{}
-\DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_im_gui_app_1_1_logger_a44cc1b46c117ff6d70fa56dbb1b9641d}{ImGuiApp::Logger::Init}}();}
+\DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_im_gui_app_1_1_i_g_a___logger_aac1a64de82b0800d65d3a31ee4891eb7}{ImGuiApp::IGA\_Logger::Init}}();}
 \DoxyCodeLine{00035\ }
 \DoxyCodeLine{00036\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{while}\ (\mbox{\hyperlink{_entry_point_8h_a8bd72616f89083ec211da0e6613b6389}{g\_ApplicationRunning}})}
 \DoxyCodeLine{00037\ \ \ \ \ \ \ \ \ \{}
