--- a/docs/latex/_i_g_a___logger_8h_source.tex
+++ b/docs/latex/_i_g_a___logger_8h_source.tex
@@ -1,6 +1,6 @@
-\doxysection{Logger.\+h}
-\hypertarget{_logger_8h_source}{}\label{_logger_8h_source}\index{Logger.h@{Logger.h}}
-\mbox{\hyperlink{_logger_8h}{Go to the documentation of this file.}}
+\doxysection{IGA\+\_\+\+Logger.\+h}
+\hypertarget{_i_g_a___logger_8h_source}{}\label{_i_g_a___logger_8h_source}\index{IGA\_Logger.h@{IGA\_Logger.h}}
+
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#pragma\ once\ }}
@@ -9,24 +9,24 @@
 \DoxyCodeLine{00014\ }
 \DoxyCodeLine{00015\ \textcolor{keyword}{namespace\ }ImGuiApp}
 \DoxyCodeLine{00016\ \{}
-\DoxyCodeLine{00021\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_im_gui_app_1_1_logger}{Logger}}}
+\DoxyCodeLine{00021\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_im_gui_app_1_1_i_g_a___logger}{IGA\_Logger}}}
 \DoxyCodeLine{00022\ \ \ \ \ \{}
 \DoxyCodeLine{00023\ \ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_logger_a44cc1b46c117ff6d70fa56dbb1b9641d}{Init}}();}
-\DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ \mbox{\hyperlink{class_im_gui_app_1_1_logger_a38bf1bb5569d12bf91ec0088dc9fad61}{GetCoreLogger}}()\ \{\ \textcolor{keywordflow}{return}\ m\_CoreLogger;\ \}}
-\DoxyCodeLine{00031\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ \mbox{\hyperlink{class_im_gui_app_1_1_logger_a9c402d8b5dd9087388cab97cfddb2d4c}{GetClientLogger}}()\ \{\ \textcolor{keywordflow}{return}\ m\_ClientLogger;\ \}}
+\DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_i_g_a___logger_aac1a64de82b0800d65d3a31ee4891eb7}{Init}}();}
+\DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ \mbox{\hyperlink{class_im_gui_app_1_1_i_g_a___logger_ac8c26043a079937a73a9ea291df1484b}{GetCoreLogger}}()\ \{\ \textcolor{keywordflow}{return}\ m\_CoreLogger;\ \}}
+\DoxyCodeLine{00031\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ \mbox{\hyperlink{class_im_gui_app_1_1_i_g_a___logger_a9ea21d135a54805256d50f291318d53a}{GetClientLogger}}()\ \{\ \textcolor{keywordflow}{return}\ m\_ClientLogger;\ \}}
 \DoxyCodeLine{00032\ \ \ \ \ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00034\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ m\_CoreLogger;}
 \DoxyCodeLine{00036\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ std::shared\_ptr<spdlog::logger>\ m\_ClientLogger;}
 \DoxyCodeLine{00037\ \ \ \ \ \};}
 \DoxyCodeLine{00038\ \}}
-\DoxyCodeLine{00040\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_INFO(...)\ ::ImGuiApp::Logger::GetCoreLogger()-\/>info(\_\_VA\_ARGS\_\_)}}
-\DoxyCodeLine{00042\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_WARN(...)\ ::ImGuiApp::Logger::GetCoreLogger()-\/>warn(\_\_VA\_ARGS\_\_)}}
-\DoxyCodeLine{00044\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_ERROR(...)\ ::ImGuiApp::Logger::GetCoreLogger()-\/>error(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00040\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_INFO(...)\ ::ImGuiApp::IGA\_Logger::GetCoreLogger()-\/>info(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00042\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_WARN(...)\ ::ImGuiApp::IGA\_Logger::GetCoreLogger()-\/>warn(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00044\ \textcolor{preprocessor}{\#define\ IGA\_CORE\_ERROR(...)\ ::ImGuiApp::IGA\_Logger::GetCoreLogger()-\/>error(\_\_VA\_ARGS\_\_)}}
 \DoxyCodeLine{00045\ }
-\DoxyCodeLine{00047\ \textcolor{preprocessor}{\#define\ IGA\_INFO(...)\ ::ImGuiApp::Logger::GetClientLogger()-\/>info(\_\_VA\_ARGS\_\_)}}
-\DoxyCodeLine{00049\ \textcolor{preprocessor}{\#define\ IGA\_WARN(...)\ ::ImGuiApp::Logger::GetClientLogger()-\/>warn(\_\_VA\_ARGS\_\_)}}
-\DoxyCodeLine{00051\ \textcolor{preprocessor}{\#define\ IGA\_ERROR(...)\ ::ImGuiApp::Logger::GetClientLogger()-\/>error(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00047\ \textcolor{preprocessor}{\#define\ IGA\_INFO(...)\ ::ImGuiApp::IGA\_Logger::GetClientLogger()-\/>info(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00049\ \textcolor{preprocessor}{\#define\ IGA\_WARN(...)\ ::ImGuiApp::IGA\_Logger::GetClientLogger()-\/>warn(\_\_VA\_ARGS\_\_)}}
+\DoxyCodeLine{00051\ \textcolor{preprocessor}{\#define\ IGA\_ERROR(...)\ ::ImGuiApp::IGA\_Logger::GetClientLogger()-\/>error(\_\_VA\_ARGS\_\_)}}
 \DoxyCodeLine{00052\ }
 \DoxyCodeLine{00053\ }
 \DoxyCodeLine{00054\ \textcolor{preprocessor}{\#define\ IGA\_STRINGIFY\_MACRO(macro)\ \#macro}}
