--- a/docs/latex/_layer_8h.tex
+++ b/docs/latex/_layer_8h.tex
@@ -5,6 +5,8 @@
 Defines the template class for Im\+Gui frames.  
 
 
+{\ttfamily \#include $<$GL/glew.\+h$>$}\newline
+{\ttfamily \#include $<$GLFW/glfw3.\+h$>$}\newline
 \doxysubsubsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
@@ -16,7 +18,7 @@ class \mbox{\hyperlink{class_im_gui_app_1_1_layer}{Im\+Gui\+App\+::\+Layer}}
 Defines the template class for Im\+Gui frames. 
 
 \begin{DoxyAuthor}{Author}
-n.\+a (\href{mailto:n.a@MasterpieceTechVideos.com}{\texttt{ n.\+a@\+Masterpiece\+Tech\+Videos.\+com}}) 
+n.\+a (\href{mailto:n.a@mail.com}{\texttt{ n.\+a@mail.\+com}}) 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+0.\+0 
