--- a/docs/latex/_timer_8h.tex
+++ b/docs/latex/_timer_8h.tex
@@ -21,7 +21,7 @@ class \mbox{\hyperlink{class_im_gui_app_1_1_scoped_timer}{Im\+Gui\+App\+::\+Scop
 Defines the classes for calculating the time for frame rate evaluation. 
 
 \begin{DoxyAuthor}{Author}
-n.\+a (\href{mailto:na@MasterpieceTechVideos.com}{\texttt{ na@\+Masterpiece\+Tech\+Videos.\+com}}) 
+n.\+a (\href{mailto:na@mail.com}{\texttt{ na@mail.\+com}}) 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+0.\+0 
