--- a/docs/latex/_entry_point_8h.tex
+++ b/docs/latex/_entry_point_8h.tex
@@ -6,7 +6,7 @@ Defines the Entry point for the application responsible which is controls how th
 
 
 {\ttfamily \#include "{}App.\+h"{}}\newline
-{\ttfamily \#include "{}Logger.\+h"{}}\newline
+{\ttfamily \#include "{}IGA\+\_\+\+Logger.\+h"{}}\newline
 \doxysubsubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
@@ -32,7 +32,7 @@ bool {\bfseries g\+\_\+\+Application\+Running} = true
 Defines the Entry point for the application responsible which is controls how the main function is run. 
 
 \begin{DoxyAuthor}{Author}
-n.\+a (\href{mailto:n.a@MasterpieceTechVideos.com}{\texttt{ n.\+a@\+Masterpiece\+Tech\+Videos.\+com}}) 
+n.\+a (\href{mailto:n.a@mail.com}{\texttt{ n.\+a@mail.\+com}}) 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+0.\+0 
