--- a/docs/latex/_layer_8h_source.tex
+++ b/docs/latex/_layer_8h_source.tex
@@ -5,18 +5,21 @@
 \DoxyCodeLine{00001\ }
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00012\ }
-\DoxyCodeLine{00013\ \textcolor{keyword}{namespace\ }ImGuiApp\ \{}
-\DoxyCodeLine{00023\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_im_gui_app_1_1_layer}{Layer}}}
-\DoxyCodeLine{00024\ \ \ \ \ \{}
-\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a3474004cc3627354020bcdc84f27bc4a}{\string~Layer}}()\ =\ \textcolor{keywordflow}{default};}
-\DoxyCodeLine{00033\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a83daab955ac3eea2776f89a683eb5308}{OnAttach}}()\ \{\}}
-\DoxyCodeLine{00038\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_af110bc02b78d068476af9b8d1c16ea24}{OnDetach}}()\ \{\}}
-\DoxyCodeLine{00044\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a35726c0ded8e8fbcb959586346145ab5}{OnUpdate}}(\textcolor{keywordtype}{float}\ ts)\ \{\}}
-\DoxyCodeLine{00050\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_afae27ec803185e61d9995b535a6ff215}{OnUIRender}}()\ \{\}}
-\DoxyCodeLine{00055\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a4a6448c74ef23178abeccbd3c4b9d024}{OnPostUIRender}}()\ \{\}}
-\DoxyCodeLine{00056\ \ \ \ \ \};}
-\DoxyCodeLine{00057\ }
-\DoxyCodeLine{00058\ \}}
+\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ <GL/glew.h>}\ }
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <GLFW/glfw3.h>}}
+\DoxyCodeLine{00015\ }
+\DoxyCodeLine{00016\ \textcolor{keyword}{namespace\ }ImGuiApp\ \{}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_im_gui_app_1_1_layer}{Layer}}}
+\DoxyCodeLine{00027\ \ \ \ \ \{}
+\DoxyCodeLine{00028\ \ \ \ \ \textcolor{keyword}{public}:}
+\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a3474004cc3627354020bcdc84f27bc4a}{\string~Layer}}()\ =\ \textcolor{keywordflow}{default};}
+\DoxyCodeLine{00036\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a83daab955ac3eea2776f89a683eb5308}{OnAttach}}()\ \{\}}
+\DoxyCodeLine{00041\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_af110bc02b78d068476af9b8d1c16ea24}{OnDetach}}()\ \{\}}
+\DoxyCodeLine{00047\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a35726c0ded8e8fbcb959586346145ab5}{OnUpdate}}(\textcolor{keywordtype}{float}\ ts)\ \{\}}
+\DoxyCodeLine{00053\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_afae27ec803185e61d9995b535a6ff215}{OnUIRender}}()\ \{\}}
+\DoxyCodeLine{00058\ \ \ \ \ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_im_gui_app_1_1_layer_a4a6448c74ef23178abeccbd3c4b9d024}{OnPostUIRender}}()\ \{\}\ }
+\DoxyCodeLine{00059\ \ \ \ \ \};}
+\DoxyCodeLine{00060\ }
+\DoxyCodeLine{00061\ \}}
 
 \end{DoxyCode}
