--- a/docs/latex/_random_8h.tex
+++ b/docs/latex/_random_8h.tex
@@ -18,7 +18,7 @@ class \mbox{\hyperlink{class_im_gui_app_1_1_random}{Im\+Gui\+App\+::\+Random}}
 Defines the classes for generating random values. 
 
 \begin{DoxyAuthor}{Author}
-n.\+a (\href{mailto:na@MasterpieceTechVideos.com}{\texttt{ na@\+Masterpiece\+Tech\+Videos.\+com}}) 
+n.\+a (\href{mailto:na@mail.com}{\texttt{ na@mail.\+com}}) 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+0.\+0 
