--- a/docs/latex/_app_8h.tex
+++ b/docs/latex/_app_8h.tex
@@ -10,6 +10,7 @@ This file defines the App class responsible for maintaining the lifecycle of the
 {\ttfamily \#include $<$vector$>$}\newline
 {\ttfamily \#include $<$memory$>$}\newline
 {\ttfamily \#include $<$functional$>$}\newline
+{\ttfamily \#include $<$set$>$}\newline
 {\ttfamily \#include "{}imgui.\+h"{}}\newline
 \doxysubsubsection*{Classes}
 \begin{DoxyCompactItemize}
