--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,7 +1,7 @@
 \chapter{Im\+Gui\+App Project}
 \hypertarget{index}{}\label{index}\index{ImGuiApp Project@{ImGuiApp Project}}
-\label{index_md__d_1_2temp_2_im_gui_app_2_r_e_a_d_m_e}%
-\Hypertarget{index_md__d_1_2temp_2_im_gui_app_2_r_e_a_d_m_e}%
+\label{index_md__d_1_2ecmpg_2test_2_im_gui_app___demo_2_im_gui_app_2_r_e_a_d_m_e}%
+\Hypertarget{index_md__d_1_2ecmpg_2test_2_im_gui_app___demo_2_im_gui_app_2_r_e_a_d_m_e}%
  \href{https://github.com/MasterpieceNKA/ImGuiApp}{\texttt{ Im\+Gui\+App}} provides some basic functionality needed to quickly create C++ gui applications using the GLFW and Open\+GL backends of \href{https://github.com/ocornut/imgui}{\texttt{ Dear Im\+Gui}}. \href{https://github.com/MasterpieceNKA/ImGuiApp}{\texttt{ Im\+Gui\+App}} uses CMake and has been tested on Windows 11 (Min\+GW \& Clang 18.\+1.\+5) and Linux (Ubuntu 22.\+04 with GNU 11.\+4.\+0 compiler). \href{https://github.com/MasterpieceNKA/ImGuiApp_Demo}{\texttt{ Im\+Gui\+App Demo Application}} is a sample application developed using this project.
 
 This project is inspired by \href{https://github.com/StudioCherno/Walnut}{\texttt{ Walnut}} which uses Vulkan instead of Open\+GL.\hypertarget{index_autotoc_md1}{}\doxysection{\texorpdfstring{Requirements}{Requirements}}\label{index_autotoc_md1}
@@ -57,6 +57,8 @@ This project is inspired by \href{https://github.com/StudioCherno/Walnut}{\textt
 
 
 \href{https://github.com/MasterpieceNKA/ImGuiApp_Demo}{\texttt{ Im\+Gui\+App Demo Application 2}}
+
+My\+Cobot 320 Pi Pick and Place example $<$video src="{}https\+://github.\+com/user-\/attachments/assets/77660176-\/cd32-\/4651-\/85e3-\/4542b71e9107"{} width="{}900px"{} controls autoplay$>$$<$/video$>$ 
 
 
 
